--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "packages/agent_cli",
     "packages/agent_core",
+    "packages/agent_ffi",
     "packages/agent_proto",
     "packages/api_client",
 ]
