--- a/packages/agent_ffi/Cargo.toml
+++ b/packages/agent_ffi/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/playit-cloud/playit-agent"
 
 [lib]
 name = "playit_agent"
-crate-type = ["staticlib"]
+crate-type = ["staticlib", "cdylib"]
 
 [dependencies]
 playit-agent-core = { path = "../agent_core" }
@@ -18,4 +18,3 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-
